# DS-P05-Search-Engine

./: CMakeLists.txt  avlTree.h  catch.hpp  main.cpp  search_engine.cpp  search_engine.h  stop.h  stop_words_english.txt  test.cpp
new-build/: 22s_final_proj  CMakeCache.txt  Makefile  cmake_install.cmake
rapidjson/: document.h  reader.h
rapidjson/error/: error.h
